[package]
name = "status-core-agent"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.8"
sysinfo = "0.33"
rusqlite = { version = "0.32", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = "0.4"
tower-http = { version = "0.6", features = ["cors"] }

[profile.release]
opt-level = "s"
lto = true
strip = true
codegen-units = 1
